--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
      <img src="red.png" class="heroimg">
      <h1>Xiaohongshu小红书</h1>
      <div class="fade-in-text" id="firstline"><h2>Xiaohongshu is a social media and e-commerce platform. It has been described as "China's answer to Instagram". As of 2019, Xiaohongshu had over 300 million registered users and the number of monthly active users is over 85 million. 70% of its users are reportedly born after 1990, and nearly 90% of them are female.</h2></div>
-     <div class="fade-in-text" id="secondline"><h2>There are uncountable posts on Xiaohongshu that spread a ridiculous skinny standard: a woman should not weigh over 100 lbs, body fat 14% is considered aesthetic, the drink diet which skinny girls just drink for a day's meal, the potato diet, the egg diet, pills that make your skin glow, abs photos that might be photoshoped or unrealistic.</h2></div>
-     <div class="fade-in-text" id="thirdline"><h2>Such sick culture has submerged the original purpose of a social media, and constantly reminding people to only care about the...</h2></div>
+     <div class="fade-in-text" id="secondline"><h2>There are uncountable posts on Xiaohongshu that spread a ridiculous skinny standard: a woman should not weigh over 100 lbs, body fat 14% is considered 'aesthetic', the drink diet in which skinny girls just drink beverages for a day's meal, the potato diet, the egg diet, pills that make your skin glow, photos of abs that might be photoshoped or unrealistic.</h2></div>
+     <div class="fade-in-text" id="thirdline"><h2>Such sick culture has taken over the original purpose of social media, and it is constantly reminding people to only care about the...</h2></div>
      </div>
 
 <div class="contentSection">
