--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
      <div class="fade-in-image"><img src="10.jpg" alt="10" class="spanGrid-1"></div>
             <div class="fade-in-text"><p>The Goddess's weight scale.</p></div>
      <div data-aos="zoom-in" class="spanGrid-2"><img src="14.jpg" alt="14" class="spanGrid-2"></div>
-            <p>Is my skin not normal and glowing like people have on there?</p>
+            <p>Why is my skin not as normal and glowy like people have on there?</p>
 </div>
 
 <div class="contentSection">
